samples/_failures_safe/1761290397_8b2cbf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_be489264.c:174: error: expected ‘;’, ‘,’ or ‘)’ at end of input
